fixed the nav bar on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,9 +275,15 @@ form button:hover {
     .form-container {
         width: 400px;
     }
+
+    nav-links ul {
+        flex-direction: row;
+        
+    }
 }
 
 @media(max-width: 800px) {
+
     nav {
         flex-direction: column;
         align-items: center;
@@ -290,8 +296,8 @@ form button:hover {
     }
 
     .nav-links ul {
-        flex-direction: column;
-        align-items: flex-start;
+        justify-content: space-evenly;
+        align-items: center;
     }
 
     .nav-links ul li {
@@ -303,10 +309,6 @@ form button:hover {
         padding: 10px 0;
         width: 100%;
         display: block;
-    }
-
-    .text-box {
-        margin-top: 100px;
     }
 
     .text-box h1 {
